# EvoAny

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README_CN.md  README_EN.md  README_ZN.md  SOUL.md  TOOLS.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
AircraftLanding/: config.py  evaluate.py  evo_func.py
_sellable_product/saas-starter/src/app/: globals.css  layout.tsx
evo-engine/: pyproject.toml  selection.py  server.py
plugin/: .mcp.json  AGENTS.md  SOUL.md  TOOLS.md  index.ts  openclaw.plugin.json  server.ts
plugin/.claude-plugin/: plugin.json
plugin/agents/: map_agent.md  orchestrator.md  policy_agent.md  reflect_agent.md  research_agent.md  worker.md
plugin/evo-engine/: models.py  pyproject.toml  selection.py  server.py
plugin/skills/evolve/: SKILL.md
plugin/skills/hunt/: SKILL.md
plugin/skills/status/: SKILL.md
plugin/src/: bibtex.ts  models.ts  research_state.ts  vectordb.ts
plugin/workflows/: evo-finish.lobster  evo-setup.lobster
research/: 01_openclaw_existing_capabilities.md  02_compatible_products_capabilities.md  03_evo_anything_analysis.md  04_ecosystem_capability_map.md  05_a_layer_knowledge_qa.md  06_implementation_roadmap.md  README.md
research/refs/: references.bib
scripts/: cli.js  postinstall.js
skills/hunt/: SKILL.md
test-gd/: benchmark.py  integration_test.py  optimizer.py
tsp-optimization_fig/data/: state(2).json
tsp-optimization_fig/data/tsp-optimization/: README.md  analyze_all_evals.py  benchmark.py  tsp.py
