[project]
name = "openclaw-evo-engine"
version = "0.1.0"
description = "MCP server for Evo-anything evolutionary algorithm bookkeeping"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
evo-engine = "server:main"

[tool.setuptools]
py-modules = ["server", "models", "selection"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
